--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Directory information system",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon"
+    "start:dev": "nodemon index.ts"
   },
   "keywords": [
     "directory",
@@ -24,8 +24,6 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
     "eslint": "^8.9.0",
     "nodemon": "^2.0.15",
     "typescript": "^4.5.5"
