--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,9 @@
 		"typescript": "^4.5.5",
 		"web-vitals": "^2.1.4"
 	},
+	"devDependencies": {
+		"sass": "^1.49.9"
+	},
 	"eslintConfig": {
 		"extends": [
 			"react-app",
