--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Directory information system",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon index.ts"
+    "dev": "nodemon -r tsconfig-paths/register server.ts"
   },
   "keywords": [
     "directory",
@@ -26,6 +26,7 @@
     "@types/express": "^4.17.13",
     "eslint": "^8.9.0",
     "nodemon": "^2.0.15",
+    "tsconfig-paths": "^3.14.1",
     "typescript": "^4.5.5"
   }
 }
