chore: remove deprecated alias

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,8 +8,7 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@shared/*": ["../shared/*"],
-      "@models": ["./models"]
+      "@shared/*": ["../shared/*"]
     },
     "strict": true,
     "allowJs": false,
