--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,13 @@
 {
   "name": "typhoon-app",
   "version": "1.0.0",
+  "type": "module",
   "description": "Directory information system",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "dev": "nodemon -r tsconfig-paths/register server.ts"
+    "build": "tsc",
+    "serve": "node --no-warnings --loader ts-paths-esm-loader --experimental-specifier-resolution=node server.ts",
+    "dev": "nodemon -e ts --exec \"npm run serve\""
   },
   "keywords": [
     "directory",
@@ -26,6 +29,7 @@
     "@types/express": "^4.17.13",
     "eslint": "^8.9.0",
     "nodemon": "^2.0.15",
+    "ts-paths-esm-loader": "^1.3.0",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.5.5"
   }
