--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "CommonJS",
+    "target": "ESNext",
+    "module": "ESNext",
     "moduleResolution": "node",
-    "lib": [
-      "es6"
-    ],
+    "esModuleInterop": true,
+    "outDir": "./dist",
     "baseUrl": ".",
     "paths": {
       "@shared/*": ["../shared/*"]
@@ -13,12 +12,11 @@
     "strict": true,
     "allowJs": false,
     "noImplicitAny": true,
-    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
-    "removeComments": true
+    "removeComments": true,
+    "sourceMap": true
   },
   "exclude": [
     "node_modules"
-  ]
+  ],
 }
