--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
 		"eject": "react-scripts eject"
 	},
 	"dependencies": {
+		"shared": "file:../shared",
 		"@testing-library/jest-dom": "^5.16.2",
 		"@testing-library/react": "^12.1.3",
 		"@testing-library/user-event": "^13.5.0",
